# Endor

./: .gitignore  CLAUDE.md  README.md
examples/: cascadia.tree.json  cascadia_dnr.tree.json  cascadia_powell2025.tree.json  cascadia_powell_DMM.tree.json  simple.tree.json
pyendor/: pyproject.toml
pyendor/endor/: __init__.py  importers.py  tree.py  validate.py
pyendor/tests/: test_importers.py  test_tree.py
schema/: logic-tree.schema.json
web/: package-lock.json  package.json
web/.claude/: launch.json
web/src/: App.css  App.tsx  store.ts
web/src/canvas/: Inspector.tsx  TreeCanvas.tsx  nodes.tsx
web/src/io/: files.ts
web/src/layout/: dagreLayout.ts
web/src/model/: edit.ts  graph.ts
web/src/ops/: operations.ts
web/src/schema/: logicTree.ts
